--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -2,5 +2,13 @@
 
 
 .Home {
+  background: url("https://res.cloudinary.com/dpnjzg0ar/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1605640409/c_and_c_3_pwf6rc.png");
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* no-repeat center center fixed; */
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  margin: none;
 }
+
