--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 
+div .MuiDrawer-paper {
+  background-color: #292C30;
+}
 
 li {
   list-style-type: none;
@@ -94,5 +97,5 @@ nav .burgerMenu  {
   nav .nav-links a:hover {
     border-bottom: 0px solid #D4AF37;
   }
-  }
+}
 
