added transitions to home and profile page

--- a/src/pages/Search/index.css
+++ b/src/pages/Search/index.css
@@ -3,11 +3,11 @@
 }
 
 
-#age-native-simple{
-    /* position: absolute; */
-    /* bottom: 10px; */
-    /* padding-right: 0; */
-}
+/* #age-native-simple{
+    position: absolute;
+    bottom: 10px;
+    padding-right: 0;
+} */
 #search-button{
     position: absolute;
 }
